# cleanroomharness

./: .env.example  .gitignore  AI_CODING_ASSISTANT_BRIEF.md  Dockerfile  Dockerfile.appliance  LICENSE  Makefile  README.md  docker-compose.appliance.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: llm_gateway.py  main.py  security.py  settings.py  telemetry.py
app/routers/: chat.py  health.py  ingest.py  retrieve.py  tools.py
app/services/: audit_service.py  evaluation_service.py  local_store.py  policy_service.py  retrieval_service.py  tool_registry.py
architecture/: portable_architecture.md
architecture/diagrams/: logical_architecture.mmd
connectors/: README.md
connectors/examples/: demo_ticket_tool.py  echo_tool.py
connectors/interfaces/: tool_contract.py
connectors/mcp/: README.md  server.py
evals/: README.md  eval_contract.md  synthetic_cases.jsonl
governance/: clean_room_policy.md  decision_log_template.md  risk_register.md
infra/k8s/: README.md
infra/k8s/appliance/: appliance.yaml
infra/k8s/base/: api.yaml  kustomization.yaml  litellm.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml
infra/k8s/base/files/: init.sql  litellm-config.yaml
infra/litellm/: config.yaml
policies/: README.md  clean_room_policy.md  data_boundary_policy.md
prompts/: README.md  system_portable.md
scripts/: appliance_entrypoint.sh  bootstrap.sh  build_airgap_bundle.sh  check_clean_room.sh
tests/: test_health.py  test_mcp_server.py  test_policy.py  test_sqlite_store.py  test_tool_dry_run.py
(+4 files in other folders)
